# Hulu-Retriever

./: .gitignore  .gitmodules  README.md  apply_patch.sh  init_module.sh  plot.py  save_patch.sh  set_env.sh  sudo_py.sh
BaseCppFiles/: CMakeLists.txt  HnswOffsetIO.cpp  build_clean.sh  raw_nvme_experiment.sh  run_test.sh
BaselineTime/: HnswOffsetIO.cpp
EarlyStop/: CMakeLists.txt  HnswOffsetIO.cpp  HopIterRecord.cpp  README.md  RecallCost.cpp  analyze_all_results.py  build_clean.sh  report.md  restore_hnswlib.sh  run.sh  run_test.sh  summary.md
FeatureChoose/: CMakeLists.txt  RecallFull.cpp  run_test.sh
FsTime/: CMakeLists.txt  MultiLayer.cpp
MakeFsWorkSpace/: analyze.py  analyze_io_ratio.py  analyze_threads.py  new_setup_fs.sh  pipeline.sh  plot_io_hold_ratio.py  plot_single_index_io_only.py  plot_single_layer_hnsw_structure.py  prepare_files  prepare_files.cpp  run.sh  run_all_tests.sh  run_all_tests_background.sh  测试说明_多线程.md  说明.md
Pipeline/: CMakeLists.txt  HnswOffsetIO.cpp  Space.cpp  Time.cpp  plot_offset_prefetch.sh  plot_offset_prefetch_windows.py
SearchDifficulty/: CMakeLists.txt  HnswOffsetIO.cpp  analyze_search_difficulty.py  build_clean.sh  compare_query_difficulty.py  fig.sh  plot_difficulty_improvements.py  plot_iter_recall_tradeoffs.py  run_difficulty_pipeline.sh  run_iter_recall_plots.sh  run_test.sh
TotalDesign/: CMakeLists.txt  HnswOffsetIO.cpp
TotalTimeLab/: HnswOffsetIO.cpp  raw_nvme_experiment.sh
WarmUp/: CMakeLists.txt  build.sh  run_warmup.sh  warmup.cpp
configs/: Config.json  Config.json.backup  NewRecallConfig.json
(+321 files in other folders)
